Production/Production/src/objects/Community_Postback_Comment__c.object
<CustomObject>
    <description>Used for posting Agent comments on a Case as replies to the related Lithium thread</description>
    <fields>
        <fullName>Agent_Login__c</fullName>
        <formula>Case__r.Agent_Login__c</formula>
        <label>Agent Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_ID__c</fullName>
        <formula>Case__r.Board_ID__c</formula>
        <label>Board ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Community Postback Comments</relationshipLabel>
        <relationshipName>Community_Postback_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FullId__c</fullName>
        <description>Generates 18-digit Id for use in Outbound messages</description>
        <formula>Id&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)    )+1,1)&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)    )+1,1)&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)    )+1,1)</formula>
        <label>FullId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postback_Comment__c</fullName>
        <description>Comments entered here are posted back to the Lithium community as replies to the thread</description>
        <label>Postback Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Agent__c</fullName>
        <description>Populated with the current Salesforce User&apos;s Lithium username who&apos;s making/editing a comment</description>
        <label>Salesforce Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <formula>Case__r.Thread_ID__c</formula>
        <label>Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_In_Self_Service_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will create a public CaseComment record</description>
        <inlineHelpText>Check to create a public CaseComment record</inlineHelpText>
        <label>Visible In Self Service Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNew__c</fullName>
        <description>This is used externally by Lithium. Is checked only when a record is created. Becomes unchecked in subsequent  edits</description>
        <formula>IF(LastModifiedDate -  CreatedDate  &lt;&gt; 0, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isNew</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Community Postback Comment</label>
    <nameField>
        <displayFormat>Comment-{0000}</displayFormat>
        <label>Postback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Postback Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>